# PicoWiFiManager

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
Lib/: CMakeLists.txt
Pages/: CMakeLists.txt  GeneratePages.sh  GeneratedFsData.c  makefsdata
Pages/Source/: index.html  wifi.shtml
Scripts/: ProgramAndLog.sh
Sdk/: SdkConfig.cmake  lwipopts.h
Source/: CMakeLists.txt  main.c
Source/Commands/: CMakeLists.txt  Commands.c  Commands.h
Source/HAL/: CMakeLists.txt
Source/HAL/Led/: Led.h
Source/HAL/WiFi/: CMakeLists.txt  WiFi.c  WiFi.h
Source/Led/: CMakeLists.txt  Led.c
Source/LinkerScript/: custom_memmap.ld
Source/Logger/: CMakeLists.txt  Logger.h
Source/WebServer/: CMakeLists.txt  WebServerCGI.c  WebServerCGI.h  WebServerSSI.c  WebServerSSI.h
Source/WiFiManager/: CMakeLists.txt  WiFiManager.c  WiFiManager.h
